# ProjectniyPractikum

lw-2/SFML.1/: CMakeLists.txt
lw-2/SFML.1/00/: CMakeCache.txt  Makefile  cmake_install.cmake
lw-2/SFML.1/01/: CMakeCache.txt  Makefile  cmake_install.cmake
lw-2/SFML.1/02/: CMakeCache.txt  Makefile  cmake_install.cmake
lw-2/SFML.1/03/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
lw-2/SFML.1/SFML1.1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lw-2/SFML.1/SFML1.2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lw-2/SFML.1/SFML1.3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lw-3/SFML.2/: CMakeLists.txt
lw-3/SFML.2/01/: main.cpp
lw-3/SFML.2/02/: main.cpp
lw-3/SFML.2/03/: main.cpp
lw-3/SFML.2/SFML2.1/: main.cpp
lw-3/SFML.2/SFML2.2/: main.cpp
lw-4/SFML.3/: CMakeLists.txt
lw-4/SFML.3/00/: main.cpp
lw-4/SFML.3/01/: CMakeLists.txt  main.cpp
lw-4/SFML.3/02/: main.cpp
lw-4/SFML.3/03/: main.cpp
lw-4/SFML.3/04/: main.cpp
lw-4/SFML.3/SFML3.1/: CMakelists.txt  main.cpp
lw-4/SFML.3/SFML3.2/: CMakeLists.txt  main.cpp
lw-4/SFML.3/SFML3.3/: CMakeLists.txt  main.cpp
lw-5/SFML.4/: CMakeLists.txt
lw-5/SFML.4/workshop1.1/: main.cpp
lw-5/SFML.4/workshop1.2/: main.cpp
lw-5/SFML.4/workshop1.3/: main.cpp
lw-5/SFML.4/workshop1.4/: main.cpp
